# quickjs-gobject

./: .gitignore  README.md  meson.build
src/: module.cc  module.hh
src/gi/: boxed.hh  function.cc  function.hh  type.cc  type.hh  value.hh
src/jsapi/: BootstrapGI.cc  BootstrapGI.hh
src/jsapi/opaque/: FunctionInfo.cc  FunctionInfo.hh  JSFunctionInfo.cc  JSFunctionInfo.hh
src/utils/: error.cc  error.hh  jsutils.cc  jsutils.hh  macros.hh
